traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code

//var diag = 0;

var j=0

def diag() {
  for(j<-1 to 6) {
  	setPos(i,j)
   	
  }}

















override def run() {
  diag()
}